--- a/kubernetes_agent_spec.yaml
+++ b/kubernetes_agent_spec.yaml
@@ -2,8 +2,11 @@
 apiVersion: v1
 kind: Pod
 spec:
+  metadata:
+    namespace: devops-tools
+    labels:
+      jenkins: slave
 
-  # provide jenkins-specific metadata.labels if pipeline error
   containers:
     - name: python
       image: python:3.10-alpine
